--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -1,16 +1,16 @@
 .navbar {
-  width: 100%;
-  height: var(--navbar-height);
-  display: flex;
-  align-items: center;
-  padding: 20px;
-  background: var(--inverted-bg-color);
+	width: 100%;
+	height: var(--navbar-height);
+	display: flex;
+	align-items: center;
+	padding: 20px;
+	background: var(--inverted-bg-color);
 }
 
 .links {
-  margin-left: auto;
+	margin-left: auto;
 }
 
-.main-link {
-  margin-right: 20px;
+.mainLink {
+	margin-right: 20px;
 }
