--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -7,7 +7,10 @@
 	font: var(--font-m);
 	background: var(--bg-color);
 	color: var(--primary-color);
-	min-height: 100vh;
+	min-height: 100vw;
+	width: 100vw;
+	max-width: 100%;
+	max-height: 100%;
 }
 
 .content-page {
