--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -1,11 +1,20 @@
 .root {
 	color: var(--primary-color);
 	cursor: pointer;
+	border: 1px solid var(--primary-color);
+	padding: 8px 12px;
+	border-radius: 10px;
 }
 
 .clear {
 	padding: 0;
 	border: none;
+	background: none;
+	outline: none;
+}
+
+.outline {
+	border: 1px solid var(--secondary-color);
 	background: none;
 	outline: none;
 }
