--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -7,7 +7,7 @@
 	font: var(--font-m);
 	background: var(--bg-color);
 	color: var(--primary-color);
-	min-height: 100vw;
+	height: 100%;
 	width: 100vw;
 	max-width: 100%;
 	max-height: 100%;
