--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -11,6 +11,15 @@
 	width: var(--sidebar-width-collapsed);
 }
 
+.collapseBtn {
+	position: absolute;
+	width: 30px;
+	height: 30px;
+	right: -22px;
+	bottom: 50px;
+	background-color: var(--inverted-bg-color);
+}
+
 .switcher {
 	position: absolute;
 	bottom: 0;
@@ -21,4 +30,12 @@
 
 .lang {
 	margin-left: 20px;
+}
+
+.switcherCollapsed {
+	flex-direction: column;
+
+	.lang {
+		margin: 0 auto;
+	}
 }
