fix: lint errors

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,6 +1,6 @@
 .app.dark {
-	--bg-color: rgb(69, 11, 91);
-	--inverted-bg-color: rgb(234, 234, 13);
+	--bg-color: rgb(69 11 91);
+	--inverted-bg-color: rgb(234 234 13);
 	--primary-color: #049604;
 	--secondary-color: #04ff04;
 	--inverted-primary-color: #0232c2;
