--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,8 +1,8 @@
 :root {
-	--bg-color: rgb(234, 234, 13);
-	--inverted-bg-color: rgb(69, 11, 91);
+	--bg-color: rgb(234 234 13);
+	--inverted-bg-color: rgb(69 11 91);
 	--primary-color: #10b526;
 	--secondary-color: #0449e0;
-	--inverted-primary-color: rgb(150, 123, 4);
+	--inverted-primary-color: rgb(150 123 4);
 	--inverted-secondary-color: #0cff04;
 }
