--- a/src/features/AuthByUsername/ui/LoginForm/LoginForm.module.scss
+++ b/src/features/AuthByUsername/ui/LoginForm/LoginForm.module.scss
@@ -1,7 +1,7 @@
 .root {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+	align-items: start;
 }
 
 .inputWrapper {
@@ -12,8 +12,16 @@
 	width: 350px;
 }
 
+.fieldWrapper {
+	margin-top: 20px;
+}
+
 .input {
 	width: 280px !important;
+
+	input {
+		color: var(--primary-color);
+	}
 }
 
 .loginBtn {
