--- a/src/shared/ui/Text/ui/Text.module.scss
+++ b/src/shared/ui/Text/ui/Text.module.scss
@@ -1,9 +1,16 @@
 .root {
-	& p:first-child {
+	h3 {
 		color: var(--primary-color);
 	}
 
-	& p:last-child {
+	p {
 		color: var(--inverted-primary-color);
+	}
+}
+
+.error {
+	h3,
+	p {
+		color: red;
 	}
 }
